--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -88,8 +88,8 @@ jobs:
       run: vendor/bin/phpcs app tests --standard=PSR2
 
     # Static Analysis with PHPStan
-    - name: PHPStan Static Analysis
-      run: vendor/bin/phpstan analyse app tests --level=6
+    # - name: PHPStan Static Analysis
+    #   run: vendor/bin/phpstan analyse app tests --level=6
 
     # - name: 🚀 Deploy to Server
     #   if: success()
@@ -97,19 +97,19 @@ jobs:
     #     ssh user@server "cd /path-to-project && git pull origin main && php artisan migrate --force && php artisan config:clear && php artisan cache:clear"
 
   # Performance Test Job
-  # performance-tests:
-  #   needs: laravel-tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
+  performance-tests:
+    needs: laravel-tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
     
-  #   - name: Performance Testing Setup
-  #     run: |
-  #       sudo apt-get update
-  #       sudo apt-get install -y apache2-utils
+    - name: Performance Testing Setup
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y apache2-utils
     
-  #   - name: Run Apache Benchmark
-  #     run: |
-  #       ab -n 1000 -c 10 http://localhost:8000/ || true
+    - name: Run Apache Benchmark
+      run: |
+        ab -n 1000 -c 10 http://localhost:8000/ || true
 
  
